	14 - Attribute name of minutesLength has been changed from minutesLength to length
	15 - Remotely added Manga to BookCategory
	16 - Remotely added Manhwa to BookCategory
	17 - Remotely added subtitle to Book
	18 - Remotely added Magazine
	19 - Remotely added Periodical to reference eSuperTypes of Magazine
	20 - Remotely added TitledItem
	21 - Remotely added title to TitledItem
	22 - Remotely added TitledItem to reference eSuperTypes of Book
	23 - Remotely added TitledItem to reference eSuperTypes of Periodical
	24 - Remotely added TitledItem to reference eSuperTypes of AudioVisualItem
	25 - Remotely removed title from Book
	26 - Remotely removed title from AudioVisualItem
	27 - Attribute name of lastName has been remotely changed from lastName to familyName
	28 - Attribute name of minutesLength has been remotely changed from minutesLength to minutes
	29 - Removed reader from BookOnTape
	30 - Remotely removed reader from BookOnTape
	31 - Removed title from Periodical
	32 - Remotely removed title from Periodical
	33 - Changed reference eType of BookOnTape.reader from Person to null
	34 - Remotely Changed reference eType of BookOnTape.reader from Person to null
	
	Two diffs on BookOnTape.reader : has been removed from both local and remote copies (pseudo-conflict).
	Two diffs on Periodical.title : it has been removed in right, and its container (Periodical) has been entirely removed from left.
	
	No equivalences.
	
	Conflicts on :
	1 and 15 : Not a generic conflict, relies on ecore-specific business rules : enum literals of the same enum with the same 'value'.
	8 and 18 : the remote Magazine is a subclass of the locally deleted Periodical
	12 and 27 : remote renaming of a locally deleted attribute
	14 and 28 : renaming to different values
	29 and 30 : pseudo-conflict : same diff on both sides
	31 and 32 : pseudo-conflict : same diff on both sides
	33 and 34 : pseudo-conflict : same diff on both sides